[doc][arrow-flight-sql-connect]Update and Correct Arrow Flight SQL Documentation (#822)
Add supplementary content and make corrections to the Arrow Flight SQL
documentation.

---------

Co-authored-by: Luzhijing <82810928+luzhijing@users.noreply.github.com>